--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "@evanpatchouli/scheduler",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "A package help to manage the transcations scheduled in node.js",
-  "main": "index.js",
+  "main": "dist/index.js",
   "dependencies": {
-    "js-text-chart": "^1.0.1",
+    "js-text-chart": "^1.0.9",
     "node-schedule": "^2.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^16.17.1",
+    "@types/node-schedule": "^2.1.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "typescript": "^4.9.5"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node ./test/server.js"
+    "serve": "node ./test/server.js",
+    "tsc:build": "npx tsc --outDir dist"
   },
   "repository": {
     "type": "git",
